[package]
name = "libnode-membership"
version = "0.0.1"
authors = [
    "Samuel Marks <samuel@offscale.io>",
    "Vladimir Komendantskiy <komendantsky@gmail.com>",
]
edition = "2018"

[dependencies]
bincode = "1.1.4"
digest = "0.8.1"
failure = "0.1.5"
serde = { version = "1.0.97", features = ["derive"] }
sha3 = "0.8.2"
